# puripy

./: .gitignore  README.md  demo.tape  demo_tui.tape  pyproject.toml
examples/: day1_explore_tracing.py  demo.py
src/puripy/: ai.py  cli.py  recorder.py  replayer.py  tui.py
tests/: test_recorder.py
